Menu improvement and modified home

--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -1,13 +1,18 @@
+<nav>
 {% for menu in menus %}
     <p>
         <a href="{{ menu.menu_name }}">
             {{ menu.menu_name }}
         </a>
-        items
-        {% for item in menu.items %}
-          <a href="{{ item.text }}">
-            {{ item.text }}
-          </a>
-        {% endfor %}
+        <ul>
+          {% for item in menu.items %}
+            <li>
+              <a href="{{ item.link_external }}" target="_blank">
+                {{ item.text }}
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
     </p>
 {% endfor %}
+</nav>
