--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -2,6 +2,7 @@
 
 {% load header %}
 {% load menu %}
+{% load footer %}
 
 {% block body_class %}template-homepage{% endblock %}
 
@@ -16,6 +17,7 @@
     <p>You can access the admin interface <a href="{% url 'wagtailadmin_home' %}">here</a> (make sure you have run "./manage.py createsuperuser" in the console first).
 
     <p>If you haven't already given the documentation a read, head over to <a href="http://docs.wagtail.io/">http://docs.wagtail.io</a> to start building on Wagtail</p>
-    
+
+    {% footer %}
 
 {% endblock %}
