added css to header

--- a/header/templates/header.html
+++ b/header/templates/header.html
@@ -1,5 +1,11 @@
+{% load static %}
 <header>
-
-  this is the header
-
+  <div class="left logo">
+    <div class="left"><img src="{% static 'img/electric_car_logo.png' %}" alt="logo"  /></div>
+    <div class="left"><h1>MAGAZINE</h1></div>
+  </div>
+  <div class="advertise">
+    tesxt
+  </div>
+  <div class="clear"></div>
 </header>
