--- a/cocheselectricos/static/css/cocheselectricos.css
+++ b/cocheselectricos/static/css/cocheselectricos.css
@@ -19,7 +19,8 @@ header .logo img {
 }
 
 header .logo h1 {
-  display:inline;.
+  color: #2D3B4E;
+  display:inline;
   letter-spacing: 3px;
   text-transform: uppercase;
   font-size: 45px;
