--- a/header/templates/header.html
+++ b/header/templates/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <header>
-  <div class="left logo">
+  <div class="logo left">
     <div class="left"><img src="{% static 'img/electric_car_logo.png' %}" alt="logo"  /></div>
     <div class="left"><h1>MAGAZINE</h1></div>
   </div>
