beginning with bootstrap trying responsive

--- a/cocheselectricos/templates/base.html
+++ b/cocheselectricos/templates/base.html
@@ -42,6 +42,7 @@
         <script type="text/javascript" src="{% static 'js/cocheselectricos.js' %}"></script>
 
         {# vendor Javascript #}
+        <script type="text/javascript" src="{% static 'vendor/node_modules/jquery/dist/jquery.min.js' %}"} ></script>
         <script type="text/javascript" src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"} ></script>
 
         {% block extra_js %}
