--- a/header/templates/header.html
+++ b/header/templates/header.html
@@ -1,11 +1,11 @@
 {% load static %}
+{% load menu %}
 <header>
-  <div class="logo left">
-    <div class="left"><img src="{% static 'img/electric_car_logo.png' %}" alt="logo"  /></div>
-    <div class="left"><h1>MAGAZINE</h1></div>
+  <div class="container">
+      <div class="row">
+        <div class="col-xs-2 col-sm-2 col-md-2"><img src="{% static 'img/electric_car_logo.png' %}" alt="logo"  /></div>
+        <div class="col-xs-3 col-sm-3 col-md-3"><h1>MAGAZINE</h1></div>
+        <div class="col-xs-7 col-sm-7 col-md-7"> advertise</p</div>
+      </div>
   </div>
-  <div class="advertise">
-    tesxt
-  </div>
-  <div class="clear"></div>
 </header>
