--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -1,16 +1,15 @@
-<nav class="navbar">
+<nav class="navbar navbar-inverse">
   <div class="container">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="true" aria-controls="navbar">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
       <span class="sr-only">Toggle navigation</span>
 {% for menu in menus %}
+  {% for item in menu.items %}
       <span class="icon-bar"></span>
+  {% endfor %}
 {% endfor %}
     </button>
     <div id="navbar" class="navbar-collapse collapse">
 {% for menu in menus %}
-        <a href="#">
-            {{ menu.menu_name }}
-        </a>
         <ul class="nav navbar-nav">
           {% for item in menu.items %}
             <li>
