--- a/cocheselectricos/static/css/cocheselectricos.css
+++ b/cocheselectricos/static/css/cocheselectricos.css
@@ -2,3 +2,20 @@ body {
   font-family: sans-serif;
   background-color: #FFFFFF;
 }
+
+.container {
+
+}
+
+.logo-img {
+    width: 31px;
+    height: auto;
+    margin: 2px 4px 0 0;
+    padding: 0;
+}
+
+.logo-text {
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: 12px;
+}
