--- a/cocheselectricos/templates/base.html
+++ b/cocheselectricos/templates/base.html
@@ -34,9 +34,13 @@
 
         {% menu %}
 
+        <div class="container">
         {% block content %}{% endblock %}
+        </div>
 
+        <div class="container">
         {% footer %}
+        </div>
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/cocheselectricos.js' %}"></script>
