--- a/header/templates/header.html
+++ b/header/templates/header.html
@@ -9,7 +9,7 @@
             <h1 class="logo-text" >MAGAZINE</h1>
           </a>
         </div>
-        <div class="col-xs-5 col-sm-6 col-md-8"> advertise</p</div>
+        <div class="col-xs-5 col-sm-6 col-md-8"> advertise</div>
       </div>
   </div>
 </header>
