--- a/cocheselectricos/templates/base.html
+++ b/cocheselectricos/templates/base.html
@@ -18,6 +18,7 @@
 
         {# External stylesheet #}
         <link rel="stylesheet" type="text/css" href="{% static 'vendor/node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'vendor/node_modules/normalize.css/normalize.css' %}">
 
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/cocheselectricos.css' %}">
