--- a/header/templates/header.html
+++ b/header/templates/header.html
@@ -3,13 +3,13 @@
 <header>
   <div class="container">
       <div class="row">
-        <div class="col-xs-7 col-sm-6 col-md-4">
+        <div class="col-xs-8 col-sm-6 col-md-4">
           <a href="#" >
             <img class="logo-img" src="{% static 'img/electric_car_logo.png' %}" alt="logo"  />
             <h1 class="logo-text" >MAGAZINE</h1>
           </a>
         </div>
-        <div class="col-xs-5 col-sm-6 col-md-8 "> advertise</div>
+        <div class="col-xs-4 col-sm-6 col-md-8 "><!-- advertise --></div>
       </div>
   </div>
 </header>
