added first file less and django less compressor

--- a/cocheselectricos/static/css/cocheselectricos.less
+++ b/cocheselectricos/static/css/cocheselectricos.less
@@ -1,7 +1,10 @@
+@mycolor: red !important;
+
 body {
   font-family: sans-serif;
   background-color: #FFFFFF;
   min-width:400px;
+  color: @mycolor;
 }
 
 header .container {
@@ -29,5 +32,5 @@ header .container {
     font-weight: bold;
     letter-spacing: 2px;
     font-size: 35px;
-    color: @prueba;
+    color: @mycolor;
 }
