hamburguer menu improvements

--- a/header/templates/header.html
+++ b/header/templates/header.html
@@ -9,7 +9,11 @@
             <h1 class="logo-text" >MAGAZINE</h1>
           </a>
         </div>
-        <div class="col-xs-4 col-sm-6 col-md-8 "><!-- advertise --></div>
+        <div class="col-xs-4 col-sm-6 col-md-8 ">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </button>
+        </div>
       </div>
   </div>
 </header>
