--- a/cocheselectricos/static/css/menu.less
+++ b/cocheselectricos/static/css/menu.less
@@ -5,11 +5,17 @@
   border-bottom: 3px solid #F89406;
 }
 
+.navbar-toggle {
+  margin-top: 17px;
+}
+
 #navbar {
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
   padding-left: 0px;
   padding-right:0px;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .navbar-nav li a{
@@ -17,11 +23,26 @@
    color: #3A3A3A;
    font-weight: bold;
    letter-spacing: 1px;
-
    line-height: 30px;
 
 }
 
-.navbar-nav li {
+.glyphicon-menu-hamburger {
+    font-size: 25px;
+}
+
+@media (max-width: @screen-xs-max) {
+  .navbar-custom {
+    border-top: 0px;
+  }
+
+  .navbar {
+    min-height: 0px;
+  }
+
+  .navbar-nav li a {
+    margin-left: 15px;
+  }
+
 
 }
