--- a/cocheselectricos/static/css/cocheselectricos.less
+++ b/cocheselectricos/static/css/cocheselectricos.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 @import "header.less";
 @import "menu.less";
+@import "headlines.less";
 
 body {
   font-family: sans-serif;
