--- a/cocheselectricos/static/css/menu.less
+++ b/cocheselectricos/static/css/menu.less
@@ -3,6 +3,7 @@
   border-top: 1px solid #EEEEEE;
   border-radius: 0px;
   border-bottom: 3px solid #F89406;
+  margin-bottom: 0px;
 }
 
 .navbar-toggle {
