--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,13 +1,33 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
 
-    <h1>Welcome to your new Wagtail222 site!</h1>
+    <div class="headlines">
+      <div style="float:left;"><img class="first-headline" src="{% static 'img/tesla-1.jpg' %}" alt="first"  /></div>
+      <div style="float:left;">
+         <div>
+           <div style="float:left;"><img class="second-headline" src="{% static 'img/kia-1.jpg' %}" alt="second"  /></div>
+           <div style="float:left;"><img class="third-headline" src="{% static 'img/nissan-1.jpg' %}" alt="third"  /></div>
+           <div style="clear:both;"></div>
+         </div>
+         <div>
+           <div style="float:left;"><img class="fourth-headline" src="{% static 'img/bmw-1.jpg' %}" alt="fourth"  /></div>
+           <div style="float:left;"><img class="fifth-headline" src="{% static 'img/bmw-1.jpg' %}" alt="fifth"  /></div>
+           <div style="clear:both;"></div>
+         </div>
+      </div>
+      <div style="clear:both"></div>
+    </div>
 
-    <p>You can access the admin interface <a href="{% url 'wagtailadmin_home' %}">here</a> (make sure you have run "./manage.py createsuperuser" in the console first).
+    <div class="container">
+      <h1>Coches eléctricos site!</h1>
 
-    <p>If you haven't already given the documentation a read, head over to <a href="http://docs.wagtail.io/">http://docs.wagtail.io</a> to start building on Wagtail</p>
+      <p>You can access the admin interface <a href="{% url 'wagtailadmin_home' %}">here</a> (make sure you have run "./manage.py createsuperuser" in the console first).
 
+      <p>If you haven't already given the documentation a read, head over to <a href="http://docs.wagtail.io/">http://docs.wagtail.io</a> to start building on Wagtail</p>
+    </div>
 {% endblock %}
