first version of dynamic headlines

--- a/cocheselectricos/static/css/headlines.less
+++ b/cocheselectricos/static/css/headlines.less
@@ -1,11 +1,48 @@
-.first-headline {
-    max-width: 100%;
-    height: 480px;
-    margin: 0;
-    padding: 0;
+.headlines {
+  width: 100%;
 }
 
-.second-headline, .third-headline, .fourth-headline, .fifth-headline {
-    max-width:100%;
-    height:200px;
+.first-headline {
+  width: 50%;
+  float:left;
+}
+
+.first-headline-img, .second-headline-img, .third-headline-img, .fourth-headline-img, .fifth-headline-img {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.other-headlines {
+  width: 50%;
+  float: left;
+}
+
+.row-headline {
+  width: 100%;
+}
+
+.clear {
+  clear:both;
+}
+
+.second-headline {
+  width:50%;
+  float:left;
+}
+
+.third-headline  {
+  width:50%;
+  float:left;
+}
+
+.fourth-headline {
+  width:50%;
+  float: left;
+}
+
+.fifth-headline {
+  width: 50%;
+  float:left;
+
 }
