adapted css to bootstrap responsive

--- a/cocheselectricos/static/css/headlines.less
+++ b/cocheselectricos/static/css/headlines.less
@@ -1,21 +1,7 @@
-.headlines {
-  width: 100%;
-}
-
-.first-headline {
-  width: 50%;
-  float:left;
-}
-
 .first-headline-img, .second-headline-img, .third-headline-img, .fourth-headline-img, .fifth-headline-img {
   max-width: 100%;
   margin: 0;
   padding: 0;
-}
-
-.other-headlines {
-  width: 50%;
-  float: left;
 }
 
 .row-headline {
@@ -26,23 +12,12 @@
   clear:both;
 }
 
-.second-headline {
+.second-headline, .third-headline, .fourth-headline, .fifth-headline {
   width:50%;
   float:left;
 }
 
-.third-headline  {
-  width:50%;
-  float:left;
-}
-
-.fourth-headline {
-  width:50%;
-  float: left;
-}
-
-.fifth-headline {
-  width: 50%;
-  float:left;
-
+.headlines .col-md-6 {
+  padding-left: 0;
+  padding-right: 0;
 }
