added floating layer over images

--- a/cocheselectricos/static/css/headlines.less
+++ b/cocheselectricos/static/css/headlines.less
@@ -21,3 +21,19 @@
   padding-left: 0;
   padding-right: 0;
 }
+
+.headline_description {
+    position:absolute;
+    width:100%;
+    top:80%;
+    background-color:rgba(255, 255, 255, 0.5);
+
+}
+
+.headline_description_top {
+  position:absolute;
+  width:100%;
+  top:40%;
+  background-color:rgba(255, 255, 255, 0.5);
+
+}
