--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -10,16 +10,29 @@
       <div class="row">
         <div class="col-md-6">
           <img class="first-headline-img" src="{% static 'img/tesla-1.jpg' %}" alt="first"  />
+          <div class="headline_description">my text</div>
         </div>
         <div class="col-md-6">
           <div class="row-headline">
-            <div class="second-headline"><img class="second-headline-img" src="{% static 'img/kia-1.jpg' %}" alt="second"  /></div>
-            <div class="third-headline"><img class="third-headline-img" src="{% static 'img/nissan-1.jpg' %}" alt="third"  /></div>
+            <div class="second-headline">
+              <img class="second-headline-img" src="{% static 'img/kia-1.jpg' %}" alt="second"  />
+              <div class="headline_description_top">my text 2</div>
+            </div>
+            <div class="third-headline">
+              <img class="third-headline-img" src="{% static 'img/nissan-1.jpg' %}" alt="third"  />
+              <div class="headline_description_top">my text 3</div>
+            </div>
             <div class="clear"></div>
           </div>
           <div class="row-headline">
-            <div class="fourth-headline"><img class="fourth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fourth"  /></div>
-            <div class="fifth-headline"><img class="fifth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fifth"  /></div>
+            <div class="fourth-headline">
+              <img class="fourth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fourth"  />
+              <div class="headline_description">my text 4</div>
+            </div>
+            <div class="fifth-headline">
+              <img class="fifth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fifth"  />
+              <div class="headline_description">my text 4</div>
+            </div>
             <div class="clear"></div>
           </div>
         </div>
