first titles over headlines

--- a/cocheselectricos/static/css/headlines.less
+++ b/cocheselectricos/static/css/headlines.less
@@ -24,16 +24,41 @@
 
 .headline_description {
     position:absolute;
-    width:100%;
-    top:80%;
-    background-color:rgba(255, 255, 255, 0.5);
+    margin-left: 10%;
+    margin-right:10%;
+    width:80%;
+    top:55%;
+}
 
+.headline_description_label {
+    background-color:rgba(0, 0, 0, 1);
+    padding: 10px 10px 10px 10px;
+    color:white;
+}
+
+.headline_description_text {
+    color: white;
+    margin-top:15px;
+    background-color:rgba(0, 0, 0, 0.6);
+    padding: 10px 10px 10px 10px;
+    font-size: 25px;
+    text-overflow: ellipsis;
 }
 
 .headline_description_top {
   position:absolute;
-  width:100%;
-  top:40%;
-  background-color:rgba(255, 255, 255, 0.5);
+  width:40%;
+  top:27%;
+  margin-left: 0%;
+  margin-right: 10%;
 
+}
+
+.headline_description_bottom {
+  position:absolute;
+  width:40%;
+  top:80%;
+  margin-left: 0%;
+  margin-right: 10%;
+  background-color:rgba(255, 255, 255, 0.5);
 }
