--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -10,28 +10,43 @@
       <div class="row">
         <div class="col-md-6">
           <img class="first-headline-img" src="{% static 'img/tesla-1.jpg' %}" alt="first"  />
-          <div class="headline_description">my text</div>
+          <div class="headline_description">
+            <span class="headline_description_label">Tesla Motors</span>
+            <div class="headline_description_text">Tesla pondrá a disposición de los usuarios 2 nuevos cargadores</div>
+          </div>
         </div>
         <div class="col-md-6">
           <div class="row-headline">
             <div class="second-headline">
               <img class="second-headline-img" src="{% static 'img/kia-1.jpg' %}" alt="second"  />
-              <div class="headline_description_top">my text 2</div>
+              <div class="headline_description_top">
+                <span class="headline_description_label">Kia</span>
+                <div class="headline_description_text">La compañía compite por el sector eléctrico</div>
+              </div>
             </div>
             <div class="third-headline">
               <img class="third-headline-img" src="{% static 'img/nissan-1.jpg' %}" alt="third"  />
-              <div class="headline_description_top">my text 3</div>
+              <div class="headline_description_top">
+                <span class="headline_description_label">Nissan</span>
+                <div class="headline_description_text">La marca nipona referente en eléctricos</div>
+              </div>
             </div>
             <div class="clear"></div>
           </div>
           <div class="row-headline">
             <div class="fourth-headline">
               <img class="fourth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fourth"  />
-              <div class="headline_description">my text 4</div>
+              <div class="headline_description_bottom">
+                <span class="headline_description_label">Bmw</span>
+                <div class="headline_description_text">Los alemanes quieren su trocito de pastel</div>
+              </div>
             </div>
             <div class="fifth-headline">
               <img class="fifth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fifth"  />
-              <div class="headline_description">my text 4</div>
+              <div class="headline_description_bottom">
+                <span class="headline_description_label">Avances</span>
+                <div class="headline_description_text">Nuevas baterías eléctricas</div>
+              </div>
             </div>
             <div class="clear"></div>
           </div>
