--- a/cocheselectricos/static/css/variables.less
+++ b/cocheselectricos/static/css/variables.less
@@ -316,6 +316,7 @@
 @screen-sm-max:              (@screen-md-min - 1);
 @screen-md-max:              (@screen-lg-min - 1);
 
+@screen-xlg-min:             1500px;
 
 //== Grid system
 //
