Added new html5 tags

--- a/cocheselectricos/static/css/headlines.less
+++ b/cocheselectricos/static/css/headlines.less
@@ -40,11 +40,15 @@
     background-color:rgba(0, 0, 0, 1);
     padding: 10px 10px 10px 10px;
     color:white;
+    height:36px;
+    font-size:14px;
+    display:inline-block;
+    margin-bottom: 0;
 }
 
 .headline_description_text {
   color: white;
-  margin-top:15px;
+  margin-top:5px;
   background-color:rgba(0, 0, 0, 0.6);
   padding: 10px 10px 10px 10px;
   font-size: 14px;
