Repaired HTML5 validator errors

--- a/cocheselectricos/templates/base.html
+++ b/cocheselectricos/templates/base.html
@@ -18,8 +18,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         {# vendor Javascript #}
-        <script type="text/javascript" src="{% static 'vendor/node_modules/jquery/dist/jquery.min.js' %}"} ></script>
-        <script type="text/javascript" src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"} ></script>
+        <script type="text/javascript" src="{% static 'vendor/node_modules/jquery/dist/jquery.min.js' %}" ></script>
+        <script type="text/javascript" src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
 
         {# External stylesheet #}
         <link rel="stylesheet" type="text/css" href="{% static 'vendor/node_modules/normalize.css/normalize.css' %}">
