--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -8,46 +8,46 @@
 
     <div class="headlines container-fluid">
       <div class="row">
-        <div class="col-md-6">
-          <img class="first-headline-img" src="{% static 'img/tesla-1.jpg' %}" alt="first"  />
-          <article class="headline_description">
+        <article class="col-md-6">
+          <figure><img class="first-headline-img" src="{% static 'img/tesla-1.jpg' %}" alt="first"  /></figure>
+          <div class="headline_description">
             <h2 class="headline_description_label">Tesla Motors</h2>
             <p class="headline_description_text">Tesla pondrá a disposición de los usuarios 2 nuevos cargadores</p>
-          </article>
-        </div>
+          </div>
+        </article>
         <div class="col-md-6">
           <div class="row-headline">
-            <div class="second-headline">
-              <img class="second-headline-img" src="{% static 'img/kia-1.jpg' %}" alt="second"  />
-              <article class="headline_description_top">
+            <article class="second-headline">
+              <figure><img class="second-headline-img" src="{% static 'img/kia-1.jpg' %}" alt="second"  /></figure>
+              <div class="headline_description_top">
                 <h2 class="headline_description_label">Kia</h2>
                 <p class="headline_description_text">La compañía compite por el sector eléctrico</p>
-              </article>
-            </div>
-            <div class="third-headline">
-              <img class="third-headline-img" src="{% static 'img/nissan-1.jpg' %}" alt="third"  />
-              <article class="headline_description_top">
+              </div>
+            </article>
+            <article class="third-headline">
+              <figure><img class="third-headline-img" src="{% static 'img/nissan-1.jpg' %}" alt="third"  /><figure>
+              <div class="headline_description_top">
                 <h2 class="headline_description_label">Nissan</h2>
                 <p class="headline_description_text">La marca nipona referente en eléctricos</p>
-              </article>
-            </div>
+              </div>
+            </article>
             <div class="clear"></div>
           </div>
           <div class="row-headline">
-            <div class="fourth-headline">
-              <img class="fourth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fourth"  />
-              <article class="headline_description_bottom">
+            <article class="fourth-headline">
+              <figure><img class="fourth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fourth"  /></figure>
+              <div class="headline_description_bottom">
                 <h2 class="headline_description_label">Bmw</h2>
                 <p class="headline_description_text">Los alemanes quieren su trocito de pastel</p>
-              </article>
+              </div>
             </div>
-            <div class="fifth-headline">
-              <img class="fifth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fifth"  />
-              <article class="headline_description_bottom">
+            <article class="fifth-headline">
+              <figure><img class="fifth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fifth"  /></figure>
+              <div class="headline_description_bottom">
                 <h2 class="headline_description_label">Avances</h2>
                 <p class="headline_description_text">Nuevas baterías eléctricas</p>
-              </article>
-            </div>
+              </div>
+            </article>
             <div class="clear"></div>
           </div>
         </div>
