addes footer css

--- a/footer/templates/footer.html
+++ b/footer/templates/footer.html
@@ -1,3 +1,5 @@
-<footer>
-  this is the footer
+<footer class="footer container-fluid" >
+  <div class="row">
+    this is the footer
+  </div>
 </footer>
