--- a/cocheselectricos/static/css/cocheselectricos.less
+++ b/cocheselectricos/static/css/cocheselectricos.less
@@ -2,6 +2,7 @@
 @import "header.less";
 @import "menu.less";
 @import "headlines.less";
+@import "footer.less";
 
 body {
   font-family: sans-serif;
