--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -55,10 +55,19 @@
     </div>
 
     <div class="container">
-      <h2>Coches eléctricos site!</h2>
+      <section>
+        <h3>Previous news</h3>
+        <article>
+          <figure></figure>
+          <h2></h2>
+          <p>You can access the admin interface <a href="{% url 'wagtailadmin_home' %}">here</a> (make sure you have run "./manage.py createsuperuser" in the console first).</p>
+        </article>
+        <article>
+          <figure></figure>
+          <h2></h2>
+          <p>If you haven't already given the documentation a read, head over to <a href="http://docs.wagtail.io/">http://docs.wagtail.io</a> to start building on Wagtail</p>
+        </article>
+      </section>
 
-      <p>You can access the admin interface <a href="{% url 'wagtailadmin_home' %}">here</a> (make sure you have run "./manage.py createsuperuser" in the console first).
-
-      <p>If you haven't already given the documentation a read, head over to <a href="http://docs.wagtail.io/">http://docs.wagtail.io</a> to start building on Wagtail</p>
     </div>
 {% endblock %}
