Solved problem with html5 validator

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -42,7 +42,7 @@
                 <h2 class="headline_description_label">Bmw</h2>
                 <p class="headline_description_text">Los alemanes quieren su trocito de pastel</p>
               </div>
-            </div>
+            </article>
             <article class="fifth-headline">
               <figure><img class="fifth-headline-img" src="{% static 'img/bmw-1.jpg' %}" alt="fifth"  /></figure>
               <div class="headline_description_bottom">
