Added first previous news section

--- a/cocheselectricos/static/css/cocheselectricos.less
+++ b/cocheselectricos/static/css/cocheselectricos.less
@@ -3,9 +3,27 @@
 @import "menu.less";
 @import "headlines.less";
 @import "footer.less";
+@import "home.less";
+@import "side.less";
 
 body {
   font-family: sans-serif;
   background-color: #FFFFFF;
   min-width:360px;
+}
+
+.section-title {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+}
+
+.section-title-line {
+  border-bottom: 5px solid #F89406;
+}
+
+.space-bottom {
+  margin-bottom: 20px;
 }
