--- a/side/templates/side.html
+++ b/side/templates/side.html
@@ -1,5 +1,5 @@
-<section>
-  <h4>Social And Adds</h4>
+<section class="side col-md-3">
+  <h4 class="section-title section-title-line">Social And Adds</h4>
   <article>
     <p>my lateral nav</p>
   </article>
