--- a/cocheselectricos/static/css/side.less
+++ b/cocheselectricos/static/css/side.less
@@ -1,3 +1,26 @@
 .side {
   margin-top:10px;
 }
+
+.social-networks {
+  margin-top: 30px;
+  background-color: #FAFAFA;
+  border: 1px solid #F1F1F1;
+
+  ul {
+    text-align: center;
+    margin-right: 35px;
+    margin-top:10px;
+    margin-bottom: 10px;
+    list-style-type: none;
+
+    li {
+        display: inline-block;
+    }
+  }
+}
+
+.adds {
+    margin-top: 20px;
+    text-align: center;
+}
