--- a/footer/templates/footer.html
+++ b/footer/templates/footer.html
@@ -1,5 +1,12 @@
 <footer class="footer container-fluid" >
-  <div class="row">
-    this is the footer
+  <div class="row middle">
+    <div class="col-xs-12 col-sm-12 col-md-12">
+      <a href="#">RSS</a> | <a href="#">Contactar</a>
+    </div>
+  </div>
+  <div class="row middle">
+    <div class="col-xs-12 col-sm-12 col-md-12">
+      © 2016 Magazine coches eléctricos. All rights reserved.
+    </div>
   </div>
 </footer>
