--- a/cocheselectricos/static/css/footer.less
+++ b/cocheselectricos/static/css/footer.less
@@ -2,4 +2,12 @@
   background-color: rgb(45,59,78);
   height: 300px;
   color:white;
+  a {
+    color:white;
+  }
+}
+
+.middle {
+  margin-top: 20px;
+  text-align: center;
 }
